--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -11,8 +11,8 @@ body    {
 /*  This centers the card. */
 
 .card {
-    margin: 0 auto; /* Added */
-    float: none; /* Added */
-    margin-bottom: 10px; /* Added */
+    margin: 0 auto;
+    float: none;
+    margin-bottom: 10px;
     margin-top: 15%;
 }
